--- a/src/app/modules/Accounting/trial-balance/trial-balance.component.html
+++ b/src/app/modules/Accounting/trial-balance/trial-balance.component.html
@@ -57,4 +57,4 @@
     <mat-footer-row class="sticky-footer" *matFooterRowDef="displayedColumns">
     </mat-footer-row>
 </mat-table>
-<mat-paginator [pageSizeOptions]="[5,10,20,50]"></mat-paginator>
+<mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[5,10,20,50]"></mat-paginator>
