--- a/src/app/modules/DataUploadDownload/datadump/datadump.component.html
+++ b/src/app/modules/DataUploadDownload/datadump/datadump.component.html
@@ -44,7 +44,7 @@
             </mat-table>
         </div> -->
 
-        <!-- <mat-paginator [pageSizeOptions]="[10,25,50]"></mat-paginator> -->
+        <!-- <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,50]"></mat-paginator> -->
         <!-- <button (click)="exportArray()" mat-raised-button color="accent">
             <mat-icon>excel</mat-icon>
             <mat-icon *ngIf="loading">
