--- a/src/app/modules/DataUploadDownload/excel-data-management/excel-data-management.component.html
+++ b/src/app/modules/DataUploadDownload/excel-data-management/excel-data-management.component.html
@@ -52,7 +52,7 @@
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
     </mat-table>
-    <mat-paginator [pageSizeOptions]="[5,10,20,50]"></mat-paginator> -->
+    <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[5,10,20,50]"></mat-paginator> -->
         <!-- <div *ngFor="let item of jsonData" fxLayout="row" fxLayoutAlign="space-between center">
         <div>{{item.StudentId}}</div>
         <div>{{item.Name}}</div>
