--- a/src/app/modules/classes/classdetail/classdetail.component.html
+++ b/src/app/modules/classes/classdetail/classdetail.component.html
@@ -169,4 +169,4 @@
     <mat-row style="width: 100%;" *matRowDef="let row; columns: displayedColumns;" class="element-row">
     </mat-row>
 </mat-table>
-<mat-paginator [pageSizeOptions]="[5,10,20]"></mat-paginator>
+<mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[5,10,20]"></mat-paginator>
