--- a/src/app/modules/control/organization/organization.component.html
+++ b/src/app/modules/control/organization/organization.component.html
@@ -263,7 +263,7 @@ mat-raised-button color="accent"
     <mat-row *matRowDef="let row; columns: displayedColumns;" style="display: flex;align-items: baseline;">
     </mat-row>
 </mat-table>
-<mat-paginator [pageSizeOptions]="[10,20,30]"></mat-paginator> -->
+<mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,20,30]"></mat-paginator> -->
 <!-- </div> -->
 <!-- <div style="width:100%; display: flex;align-items: center; justify-content: center;padding: 15px 15px 15px 0px">
     <button [disabled]="loading" class="mat-raised-button" matTooltip="login" (click)="login()">
