--- a/src/app/modules/evaluation/evaluationandexam/evaluationandexam.component.html
+++ b/src/app/modules/evaluation/evaluationandexam/evaluationandexam.component.html
@@ -95,6 +95,6 @@ mat-raised-button color="accent"
             (click)="highlight(indx)">
         </mat-row>
     </mat-table>
-    <mat-paginator [pageSizeOptions]="[5,10,20,50]"></mat-paginator>
+    <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[5,10,20,50]"></mat-paginator>
     
 </div>
