--- a/src/app/modules/globaladmininitial/adminrolepermission/adminrolepermission.component.html
+++ b/src/app/modules/globaladmininitial/adminrolepermission/adminrolepermission.component.html
@@ -107,5 +107,5 @@
         <mat-row *matRowDef="let row; columns: DisplayColumns;">
         </mat-row>
     </mat-table>
-    <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
+    <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,100]"></mat-paginator>
 </div>
