--- a/src/app/modules/globaladmininitial/customerplanfeature/customerplanfeature.component.html
+++ b/src/app/modules/globaladmininitial/customerplanfeature/customerplanfeature.component.html
@@ -90,4 +90,4 @@ mat-raised-button color="accent"
     <mat-row style="width: 100%;" *matRowDef="let row; columns: displayedColumns;" class="element-row">
     </mat-row>
 </mat-table>
-<mat-paginator [pageSizeOptions]="[10,20,50]"></mat-paginator>
+<mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,20,50]"></mat-paginator>
