--- a/src/app/modules/globaladmininitial/menu-config/menu-config.component.html
+++ b/src/app/modules/globaladmininitial/menu-config/menu-config.component.html
@@ -147,4 +147,4 @@ mat-raised-button color="accent"
     <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: DisplayColumns;" class="element-row"></mat-row>
 </mat-table>
-<mat-paginator [pageSizeOptions]="[5,10,25,100]"></mat-paginator>
+<mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[5,10,25,100]"></mat-paginator>
