--- a/src/app/modules/globaladmininitial/organizationpayment/organizationpayment.component.html
+++ b/src/app/modules/globaladmininitial/organizationpayment/organizationpayment.component.html
@@ -115,7 +115,7 @@ mat-raised-button color="accent" (click)="UpdateOrSave(element)">
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
             </mat-table>
-            <mat-paginator [pageSizeOptions]="[10,20,30]"></mat-paginator>
+            <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,20,30]"></mat-paginator>
         </div>
         <div style="width:100%; display: flex;align-items: center; justify-content: center;padding: 15px 15px 15px 0px">
             <button [disabled]="loading" class="mat-raised-button" matTooltip="login" (click)="login()">
