--- a/src/app/modules/schoolreports/today-collection/today-collection.component.html
+++ b/src/app/modules/schoolreports/today-collection/today-collection.component.html
@@ -147,6 +147,6 @@
             </button>
         </span>
     </div>
-    <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
+    <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,100]"></mat-paginator>
 </div>
 <!-- </div> -->
