--- a/src/app/modules/student/studentattendancereport/studentattendancereport.component.html
+++ b/src/app/modules/student/studentattendancereport/studentattendancereport.component.html
@@ -37,4 +37,4 @@
     {{item.AttendanceStatus==1?'Total Present - ':'Total Absent - '}} {{item.Total}}
 </div>
 </div>
-<mat-paginator [pageSizeOptions]="[10,20,50]"></mat-paginator>
+<mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,20,50]"></mat-paginator>
