--- a/src/app/modules/studentactivity/sportsresult/sportsresult.component.html
+++ b/src/app/modules/studentactivity/sportsresult/sportsresult.component.html
@@ -177,5 +177,5 @@
         <mat-row *matRowDef="let row; columns: displayedColumns;let indx=index" class="element-row"
             style="align-items: center;"></mat-row>
     </mat-table>
-    <mat-paginator [pageSizeOptions]="[3,5,10,20,50]"></mat-paginator>
+    <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[3,5,10,20,50]"></mat-paginator>
 </div>
