--- a/src/app/modules/studentexam/studentgrade/studentgrade.component.html
+++ b/src/app/modules/studentexam/studentgrade/studentgrade.component.html
@@ -140,7 +140,7 @@
                 <mat-row style="width: 100%;" *matRowDef="let row; columns: displayedColumns;" class="element-row">
                 </mat-row>
             </mat-table>
-            <mat-paginator [pageSizeOptions]="[10,20,100]"></mat-paginator>
+            <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,20,100]"></mat-paginator>
         </div>
         <!-- <button type="button" class="btn btn-outline-secondary mr-2" placement="top"
             ngbPopover="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." popoverTitle="Popover on top">
