--- a/src/app/modules/appconfigdata/userconfigreportname/userconfigreportname.component.html
+++ b/src/app/modules/appconfigdata/userconfigreportname/userconfigreportname.component.html
@@ -59,5 +59,5 @@
         <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: DisplayColumns;" class="element-row"></mat-row>
     </mat-table>
-    <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
+    <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,100]"></mat-paginator>
 </div>
