--- a/src/app/modules/contact/contactdashboard/contactdashboard.component.html
+++ b/src/app/modules/contact/contactdashboard/contactdashboard.component.html
@@ -69,7 +69,7 @@
           </mat-row>
         </mat-table>
   
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+        <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
       </div>
     </mat-card-content>
   </mat-card>
