--- a/src/app/modules/control/roleuser/roleuserdashboard/roleuserdashboard.component.html
+++ b/src/app/modules/control/roleuser/roleuserdashboard/roleuserdashboard.component.html
@@ -70,5 +70,5 @@
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
     </mat-table>
-    <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
+    <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,100]"></mat-paginator>
 </div>
