--- a/src/app/modules/define-pages/pageDashboard/pageDashboard.component.html
+++ b/src/app/modules/define-pages/pageDashboard/pageDashboard.component.html
@@ -55,7 +55,7 @@
         </mat-row>
       </mat-table>
 
-      <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+      <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
     </div>
   </mat-card-content>
 </mat-card>
