--- a/src/app/modules/evaluation/evaluationexammap/EvaluationExamMap.component.html
+++ b/src/app/modules/evaluation/evaluationexammap/EvaluationExamMap.component.html
@@ -103,7 +103,7 @@
             <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row">
             </mat-row>
         </mat-table>
-        <mat-paginator [pageSizeOptions]="[5,10,20,50]"></mat-paginator>
+        <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[5,10,20,50]"></mat-paginator>
 
     </div>
 </div>
