--- a/src/app/modules/evaluation/evaluationresult/evaluationresult.component.html
+++ b/src/app/modules/evaluation/evaluationresult/evaluationresult.component.html
@@ -172,7 +172,7 @@
                 printSectionId="printSection" [useExistingCss]="true" ngxPrint class="mat-raised-button">
                 <mat-icon>print</mat-icon>
             </button>
-            <mat-paginator [pageSizeOptions]="[1,5,50,100]"></mat-paginator>
+            <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[1,5,50,100]"></mat-paginator>
         </span>
     </div>
 </div>
