--- a/src/app/modules/globaladmininitial/planandmasteritem/planandmasteritem.component.html
+++ b/src/app/modules/globaladmininitial/planandmasteritem/planandmasteritem.component.html
@@ -97,4 +97,4 @@ mat-raised-button color="accent" (click)="SaveRow(element)">
     <mat-row style="width: 100%;" *matRowDef="let row; columns: displayedColumns;" class="element-row">
     </mat-row>
 </mat-table>
-<mat-paginator [pageSizeOptions]="[10,20,50]"></mat-paginator>
+<mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,20,50]"></mat-paginator>
