--- a/src/app/modules/globaladmininvoice/reportconfigitem/reportconfigitem.component.html
+++ b/src/app/modules/globaladmininvoice/reportconfigitem/reportconfigitem.component.html
@@ -119,7 +119,7 @@ mat-raised-button color="accent"
         <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: DisplayColumns;" class="element-row"></mat-row>
     </mat-table>
-    <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
+    <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,100]"></mat-paginator>
 </div>
 <!-- </div> -->
 <!-- </div> -->
