--- a/src/app/modules/misc/no-of-student/no-of-student.component.html
+++ b/src/app/modules/misc/no-of-student/no-of-student.component.html
@@ -40,4 +40,4 @@
     <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
     <mat-footer-row *matFooterRowDef="displayedColumns"></mat-footer-row>
 </mat-table>
-<mat-paginator [pageSizeOptions]="[5,10,25,100]"></mat-paginator>
+<mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[5,10,25,100]"></mat-paginator>
