--- a/src/app/modules/schoolreports/result/result.component.html
+++ b/src/app/modules/schoolreports/result/result.component.html
@@ -67,7 +67,7 @@
                     printSectionId="printSection" [useExistingCss]="true" ngxPrint class="mat-raised-button">
                     <mat-icon>print</mat-icon>
                 </button>
-                <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
+                <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,100]"></mat-paginator>
             </span>
         </div>
     </div>
