--- a/src/app/modules/schooltimetable/schooltimetable/schooltimetable.component.html
+++ b/src/app/modules/schooltimetable/schooltimetable/schooltimetable.component.html
@@ -5,81 +5,79 @@
     <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <!-- <alert></alert> -->
     <!-- <div style="padding: 15px;" fxLayout="row wrap"> -->
-        <div style="width: 100%;">
-            <form [formGroup]="searchForm" fxLayout="row" fxLayoutAlign="space-between center">
-                <div>
-                    <mat-form-field appearance="outline" [style.width.px]="200">
-                        <mat-label>Class</mat-label>
-                        <mat-select formControlName="searchClassId">
-                            <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
-                                {{item.ClassName}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                    <mat-form-field appearance="outline" [style.width.px]="150">
-                        <mat-label>Section</mat-label>
-                        <mat-select formControlName="searchSectionId">
-                            <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
-                                {{item.MasterDataName}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                    <button [disabled]="loading" matTooltip="search" class="mat-raised-button"
-                        (click)="GetSchoolTimeTable()">
-                         <mat-icon>search</mat-icon>
-                            <mat-icon *ngIf="loading">
-                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                            </mat-icon>
-                    </button>
-                </div>
-            </form>
-            <div style="overflow: auto;height: 430px; width: auto;">
-                <mat-table #table [dataSource]="dataSource">
-
-                    <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index"
-                        matColumnDef="{{disCol}}">
-                        <mat-header-cell *matHeaderCellDef>
-                            <span
-                                style="padding-left: 10px;">{{disCol=='Action'?'':disCol.includes('f_')?(disCol|slice:2):disCol}}</span>
-                            <div *ngIf="SchoolTimeTableList.length>0">
-                                <button *ngIf="disCol=='Action'" [disabled]="loading || Permission=='read'"
-                                    matTooltip="save all" mat-mini-fab (click)="SaveAll()">
-                                    <mat-icon>all_out</mat-icon>
-                <mat-icon *ngIf="loading">
-                    <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                </mat-icon>
-                                </button>
-                            </div>
-                        </mat-header-cell>
-                        <mat-cell *matCellDef="let element"
-                            [ngStyle]="{'justify-content': disCol == 'Day'?'left' : 'center' }">
-                            <span *ngIf="disCol !='Day' && !disCol.includes('f_') && disCol !='Action'">
-                                <mat-form-field style="width:135px;">
-                                    <mat-select (selectionChange)="onBlur(element,$event,disCol)"                                      
-                                        [(ngModel)]="element[disCol]" [value]="element[disCol]">
-                                        <mat-option *ngFor="let item of ClassWiseSubjects"
-                                            [value]="item.ClassSubjectId">
-                                            {{item.SubjectAndTeacherName}}
-                                        </mat-option>
-                                    </mat-select>
-                                </mat-form-field>
-                            </span>
-                            <button *ngIf="disCol=='Action'"
-                                [disabled]="loading || !element['Action'] || Permission=='read'" matTooltip="save"
-                                mat-mini-fab (click)="SaveRow(element)">
-                                 <mat-icon>save</mat-icon>
-                            <mat-icon *ngIf="loading">
-                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                            </mat-icon>
-                            </button>
-                            <span style="margin-right: 15px;">{{ disCol.includes('f_')?(disCol|slice:2):disCol
-                                =='Day'?element[disCol]:''}}</span>
-                        </mat-cell>
-                    </ng-container>
-                    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                    <mat-row *matRowDef="let row; columns: displayedColumns;" style="min-height: 40px;"></mat-row>
-                </mat-table>
+    <div style="width: 100%;">
+        <form [formGroup]="searchForm" fxLayout="row" fxLayoutAlign="space-between center">
+            <div>
+                <mat-form-field appearance="outline" [style.width.px]="200">
+                    <mat-label>Class</mat-label>
+                    <mat-select formControlName="searchClassId">
+                        <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
+                            {{item.ClassName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <mat-form-field appearance="outline" [style.width.px]="150">
+                    <mat-label>Section</mat-label>
+                    <mat-select formControlName="searchSectionId">
+                        <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">
+                            {{item.MasterDataName}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <button [disabled]="loading" matTooltip="search" class="mat-raised-button"
+                    (click)="GetSchoolTimeTable()">
+                    <mat-icon>search</mat-icon>
+                    <mat-icon *ngIf="loading">
+                        <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                    </mat-icon>
+                </button>
             </div>
+        </form>
+        <div style="overflow: auto;height: 430px; width: auto;">
+            <mat-table #table [dataSource]="dataSource">
+
+                <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
+                    <mat-header-cell *matHeaderCellDef>
+                        <span
+                            style="padding-left: 10px;">{{disCol=='Action'?'':disCol.includes('f_')?(disCol|slice:2):disCol}}</span>
+                        <div *ngIf="SchoolTimeTableList.length>0">
+                            <button *ngIf="disCol=='Action'" [disabled]="loading || Permission=='read'"
+                                matTooltip="save all" mat-mini-fab (click)="SaveAll()">
+                                <mat-icon>all_out</mat-icon>
+                                <mat-icon *ngIf="loading">
+                                    <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                                </mat-icon>
+                            </button>
+                        </div>
+                    </mat-header-cell>
+                    <mat-cell *matCellDef="let element"
+                        [ngStyle]="{'justify-content': disCol == 'Day'?'left' : 'center' }">
+                        <span *ngIf="disCol !='Day' && !disCol.includes('f_') && disCol !='Action'">
+                            <mat-form-field style="width:135px;">
+                                <mat-select (selectionChange)="onBlur(element,$event,disCol)"
+                                    [(ngModel)]="element[disCol]" [value]="element[disCol]">
+                                    <mat-option *ngFor="let item of ClassWiseSubjects" [value]="item.TeacherSubjectId">
+                                        {{item.SubjectName}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </span>
+                        <button *ngIf="disCol=='Action'"
+                            [disabled]="loading || !element['Action'] || Permission=='read'" matTooltip="save"
+                            mat-mini-fab (click)="SaveRow(element)">
+                            <mat-icon>save</mat-icon>
+                            <mat-icon *ngIf="loading">
+                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
+                            </mat-icon>
+                        </button>
+                        <span style="margin-right: 15px;">{{ disCol.includes('f_')?(disCol|slice:2):disCol
+                            =='Day'?element[disCol]:''}}</span>
+                    </mat-cell>
+                </ng-container>
+                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                <mat-row *matRowDef="let row; columns: displayedColumns;" style="min-height: 40px;"></mat-row>
+            </mat-table>
         </div>
     </div>
+</div>
 <!-- </div> -->
