--- a/src/app/modules/schooltimetable/teachersubject/teachersubject.component.html
+++ b/src/app/modules/schooltimetable/teachersubject/teachersubject.component.html
@@ -117,6 +117,6 @@
             <mat-row *matRowDef="let row; columns: displayedColumns;" style="display:flex;align-items: baseline;">
             </mat-row>
         </mat-table>
-        <mat-paginator [pageSizeOptions]="[5,10,25,100]"></mat-paginator>
+        <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[5,10,25,100]"></mat-paginator>
     </div>
 </div>
