--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -7,7 +7,7 @@
         <form [formGroup]="studentSearchForm" fxLayout="row wrap" fxLayoutAlign="center center">
             <mat-form-field appearance="outline" style="width: 150px;">
                 <mat-label>Class</mat-label>
-                <mat-select formControlName="searchClassId">
+                <mat-select formControlName="searchClassId" (selectionChange)="ClearData()">
                     <mat-option value="0">select</mat-option>
                     <mat-option *ngFor="let item of Classes" [value]="item.ClassId">
                         {{item.ClassName}}
@@ -157,7 +157,7 @@
                     [ngClass]="{ 'highlight': row.Remarks.toLowerCase() == 'orphan' }">
                 </mat-row>
             </mat-table>
-            <mat-paginator [pageSizeOptions]="[10,25,50]"></mat-paginator>
+            <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,50]"></mat-paginator>
         </div>
     </mat-card-content>
     <!-- <mat-card-actions fxLayoutAlign="center center">
