--- a/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.html
+++ b/src/app/modules/studentexam/slotnclasssubject/slotnclasssubject.component.html
@@ -54,7 +54,7 @@
         </ng-container>
         <ng-container matColumnDef="Action">
             <mat-header-cell *matHeaderCellDef>
-                <button [disabled]="loading || Permission=='read'" matTooltip="save all"
+                <button [disabled]="loading || Permission=='read' || ExamReleased" matTooltip="save all"
                     *ngIf="ClassWiseSubjectDisplay.length>0" mat-mini-fab (click)="SaveAll()">
                     <mat-icon>all_out</mat-icon>
                     <mat-icon *ngIf="loading">
@@ -63,7 +63,7 @@
                 </button>
             </mat-header-cell>
             <mat-cell *matCellDef="let element" fxLayoutAlign="space-between center" fxLayout="row">
-                <button [disabled]="loading || !element.Action" matTooltip="save" mat-raised-button color="accent"
+                <button [disabled]="loading || !element.Action || ExamReleased" matTooltip="save" mat-raised-button color="accent"
                     (click)="Save(element)">
                     <mat-icon>save</mat-icon>
                     <mat-icon *ngIf="loading">
