--- a/src/app/modules/studentexam/verifyresults/verifyresults.component.html
+++ b/src/app/modules/studentexam/verifyresults/verifyresults.component.html
@@ -61,7 +61,7 @@
             <mat-row *matRowDef="let row; columns: displayedColumns;" class="element-row"></mat-row>
 
         </mat-table>
-        <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
+        <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,100]"></mat-paginator>
     </div>
     <div *ngIf="ExamStudentSubjectGrading.length>0" style="flex-direction: column;">
         <div style="font-weight: bold;">Grading Subject</div>
@@ -79,7 +79,7 @@
             <mat-header-row *matHeaderRowDef="GradingDisplayedColumns"></mat-header-row>
             <mat-row *matRowDef="let row; columns: GradingDisplayedColumns;" class="element-row"></mat-row>
         </mat-table>
-        <mat-paginator [pageSizeOptions]="[10,25,100]"></mat-paginator>
+        <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,100]"></mat-paginator>
     </div>
 </div>
 
